<resources>
    <string name="app_name">AndroidAtriumExample</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="have_account">Do you want to create an MX Atrium account?</string>
    <string name="create_user">Create a User:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="create_account">Create Account</string>
    <string name="institution">Institution:</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
