<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@mipmap/splash_logo"
        android:id="@+id/imageView2"
        android:paddingTop="20dp"
        android:layout_height="120dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp"/>

    <TextView
        android:text="@string/have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mxAtriumYes"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textAlignment="textEnd"
            android:clickable="true"/>

        <Space
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="2dp"/>

        <TextView
            android:text="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mxAtriumNo"
            android:layout_weight="1"
            android:textSize="24sp"
            android:textAlignment="textStart"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>